Расширена панель поиска, растянут logo на 100%

--- a/app/main.css
+++ b/app/main.css
@@ -1,6 +1,10 @@
+.panel {
+  width: 890px;
+}
 .logo {
   margin-bottom: 10px;
   display: block;
+  width: 100%;
 }
 .cell {
   vertical-align: middle;
