--- a/app/stylus/main.styl
+++ b/app/stylus/main.styl
@@ -6,9 +6,13 @@ limited-cell(width = 200px)
   display inline-block
   text-overflow ellipsis
 
+.panel
+  width 890px
+
 .logo
   margin-bottom 10px
   display block
+  width 100%
 
 .cell
   vertical-align middle
